Created a requirements.txt file for all pip installables for local work

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -11,6 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f9f5f30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt\n",
+    "#pip installs a list of libraries\n",
+    "#list can be found in requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a21a7ae",
    "metadata": {},
    "outputs": [],
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "86fcf2ac",
    "metadata": {},
    "outputs": [
@@ -56,7 +68,7 @@
     }
    ],
    "source": [
-    "%pip install wordcloud\n"
+    "#%pip install wordcloud\n"
    ]
   },
   {
