--- a/project.ipynb
+++ b/project.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ae45cd62-790b-498e-936f-700e205bfbc9",
    "metadata": {},
    "outputs": [],
@@ -476,13 +476,12 @@
     "    \n",
     "    sw = stopwords.words('english')\n",
     "    regex_token = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
+    "    doc = re.sub(r\"\\([^()]*\\)|\\[[^\\]]*\\]|\\{[^}]*\\}\", \"\", doc)\n",
     "    doc = regex_token.tokenize(doc)\n",
     "    doc = [word.lower() for word in doc]\n",
     "    doc = [word for word in doc if word not in sw]\n",
-    "    #print(doc)\n",
     "    doc = pos_tag(doc)\n",
     "    doc = [(word[0], get_wordnet_pos(word[1])) for word in doc]\n",
-    "    #print(doc)\n",
     "    lemmatizer = WordNetLemmatizer() \n",
     "    doc = [lemmatizer.lemmatize(word[0], word[1]) for word in doc]\n",
     "    #print(' '.join(doc))\n",
