--- a/project.ipynb
+++ b/project.ipynb
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "99d9f114-0aa0-4f10-bf16-591727153b6d",
+   "id": "31af13bc",
    "metadata": {},
    "outputs": [
     {
@@ -1866,11 +1866,53 @@
     "print(lemma_sentences)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b62512-9911-4314-b1e8-5f482190e1eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#small scale version of sentnce tokenization, must be expanded with for looop and data structure\n",
+    "art = articles_list_2[0] #grab first article\n",
+    "art_sent = nltk.sent_tokenize(art) #sentnce split\n",
+    "clean_sents = []\n",
+    "for doc in art_sent:\n",
+    "    clean_sents.append(data_cleaner(doc)) #clean sentences\n",
+    "print(\"done\")\n",
+    "print(art_sent[0:5]) #uncleaned\n",
+    "\n",
+    "def sentence_value_creator(doc, vector_dict):\n",
+    "    \"\"\" \n",
+    "    A function to take in a single article at a time, split the article by sentences, clean those sentences, split each sentence by words,\n",
+    "    match each word with its vector, sum the vectors and return a list of sentence indexes and vector sums\n",
+    "    \"\"\"\n",
+    "    i = 0 #keeps track of sentence index\n",
+    "    sent_index_val_dict = [] #keeps sent index and vector val as tuple\n",
+    "    #summary_dict = {} #each key is a number that corresponds to an aritcle, the value is a list of integers that correspond to a sentence in the article\n",
+    "    doc_sents = nltk.sent_tokenize(doc) #sentence split\n",
+    "    clean_sents = []\n",
+    "    for sent in doc_sents:\n",
+    "        clean_sents.append(data_cleaner(sent)) #clean sentences\n",
+    "    for sent in clean_sents:\n",
+    "        c = 0 #sums vectors\n",
+    "        sent_split = sent.split() #word split\n",
+    "        for word in sent_split:\n",
+    "            if word in vector_dict:\n",
+    "                c += vector_dict[word]\n",
+    "            else: \n",
+    "                c+=0\n",
+    "        sent_index_val_dict.append((i,c))\n",
+    "        i =+ 1\n",
+    "    return(sent_index_val_dict)\n",
+    "                "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "573",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1884,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
