cleaned up function, added comments

--- a/project.ipynb
+++ b/project.ipynb
@@ -1797,6 +1797,7 @@
     }
    ],
    "source": [
+    "#dict of dict where key is doc index, val is dict, inner dict key is sent index, val is vector sum\n",
     "doc_word_vector_dict = elife_t_c.to_dict(orient='index')"
    ]
   },
@@ -1888,24 +1889,19 @@
     "    A function to take in a single article at a time, split the article by sentences, clean those sentences, split each sentence by words,\n",
     "    match each word with its vector, sum the vectors and return a list of sentence indexes and vector sums\n",
     "    \"\"\"\n",
-    "    i = 0 #keeps track of sentence index\n",
     "    sent_index_val_dict = [] #keeps sent index and vector val as tuple\n",
     "    #summary_dict = {} #each key is a number that corresponds to an aritcle, the value is a list of integers that correspond to a sentence in the article\n",
     "    doc_sents = nltk.sent_tokenize(doc) #sentence split\n",
     "    clean_sents = []\n",
-    "    for sent in doc_sents:\n",
-    "        clean_sents.append(data_cleaner(sent)) #clean sentences\n",
-    "    for sent in clean_sents:\n",
+    "    for i, sent in enumerate(doc_sents):\n",
+    "        clean_sent = data_cleaner(sent) #clean sentences\n",
     "        c = 0 #sums vectors\n",
-    "        sent_split = sent.split() #word split\n",
+    "        sent_split = clean_sent.split() #word split\n",
     "        for word in sent_split:\n",
-    "            if word in vector_dict:\n",
-    "                c += vector_dict[word]\n",
-    "            else: \n",
-    "                c+=0\n",
+    "            if word in vector_dict[i]:\n",
+    "                c += vector_dict[i][word]\n",
     "        sent_index_val_dict.append((i,c))\n",
-    "        i =+ 1\n",
-    "    return(sent_index_val_dict)\n",
+    "    return sent_index_val_dict\n",
     "                "
    ]
   }
