add tfidf summaries to the df

--- a/project.ipynb
+++ b/project.ipynb
@@ -1576,6 +1576,9 @@
     "\n",
     "for summary in doc_summaries:\n",
     "    print(summary)\n",
+    "\n",
+    "# Save the summaries as a new column on dataframe\n",
+    "df_elife_train_clean['tfidf_summary'] = doc_summaries\n",
     "    "
    ]
   }
