avery and rachel Post-meeting notes

--- a/project.ipynb
+++ b/project.ipynb
@@ -1544,6 +1544,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52b3f27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove outliers and citations\n",
+    "# Calculate average length of abstractive summaries to set as top_num\n",
+    "# Check that clean and unclean sentences are same length\n",
+    "# Look at 10 summaries \n",
+    "# Run on the mac and save as new column in dataframe\n",
+    "# Add more notes to the code; add markdown cells\n",
+    "# Make new file as \"pretty version\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20bdf719",
    "metadata": {},
    "outputs": [
