added markup, fixed doc strings

--- a/project.ipynb
+++ b/project.ipynb
@@ -434,10 +434,8 @@
     "    \"\"\"A function to strip punctuation, strip stopwords, casefold, lemmatize,\n",
     "    And part of speech tag words for clean data for modeling\"\"\"\n",
     "    custom_stops = ['doi', 'figure', 'elife', 'et', 'al']\n",
-    "    #add \"et\" and \"al\" to custom stops\n",
     "    sw = stopwords.words('english')\n",
     "    regex_token = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
-    "    #doc = re.sub(r\"\\([^()]*\\)|\\[[^\\]]*\\]|\\{[^}]*\\}\", \"\", doc)\n",
     "    doc = regex_token.tokenize(doc)\n",
     "    doc = [word.lower() for word in doc]\n",
     "    doc = [word for word in doc if word not in sw and word not in custom_stops]\n",
@@ -445,7 +443,6 @@
     "    doc = [(word[0], get_wordnet_pos(word[1])) for word in doc]\n",
     "    lemmatizer = WordNetLemmatizer() \n",
     "    doc = [lemmatizer.lemmatize(word[0], word[1]) for word in doc]\n",
-    "    #print(' '.join(doc))\n",
     "    return ' '.join(doc)"
    ]
   },
@@ -710,6 +707,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb39f00f-dc21-4dde-9611-c9da883192c0",
+   "metadata": {},
+   "source": [
+    "# Data Preparation and Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f30a50e6-ff10-49fd-a8b1-f704f4ac09b9",
+   "metadata": {},
+   "source": [
+    "The first step to our data praparation was to remove large outliers. If you look at the Elife Document Length bar graph above that at about 11000 words in lenght we have a handful of very legnthy documents. This will allow us to cut back on the amount of processing and save on time as well as not having content from an extra large document over weighting our tf-idf scores. We removed 53 large outlier articles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 114,
    "id": "1a39aae1-ed56-46d7-8ee1-29a26d64bf83",
@@ -725,12 +738,19 @@
     }
    ],
    "source": [
-    "#removing large outliers, go from 436 articles to 4293 articles \n",
-    "\n",
+    "#code to remove documents of more than 11000 words\n",
     "df_elife_train = df_elife_train[df_elife_train['article'].str.len() < 110000 ]\n",
     "print(df_elife_train.shape)\n",
     "articles_no_outliers = df_elife_train.article.tolist()\n",
     "print(len(articles_no_outliers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fde823a-9d5c-42f1-bcb5-c464d512e19d",
+   "metadata": {},
+   "source": [
+    "One of the other problems we encounterd when inspecting the data is the large amount of academic in text citations. These citations cause several issues, they're so common that they occur far more frequently than content words do which creates extra noise. They're also full of punctuation which messes with the mechanics of the sentence tokenizer we selected whcih resulted in \"false\" sentences. To solve these issues we removed the citations and moved hte ufnction to do so up above the more standard cleaning function. This allows us to keep our sentence index stable throughout the process."
    ]
   },
   {
@@ -770,12 +790,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ca54220-4e8a-4718-ba17-25acfb98365f",
+   "cell_type": "markdown",
+   "id": "422da89c-1b10-45fc-82f8-5dca952c23e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To run this code on new data you will need to uncomment and run the following two cells. To recreate the exact results from our interpretation you will need to use the df_elife_train_clean.csv whcih can be located in our data folder."
+   ]
   },
   {
    "cell_type": "code",
@@ -792,7 +812,8 @@
     }
    ],
    "source": [
-    "# #run data through data cleaning function\n",
+    "# #runs data through data cleaning function\n",
+    "# run this cell unless otehrwise specified\n",
     "\n",
     "# clean_corpus = []\n",
     "# for doc in no_parens_corpus:\n",
@@ -941,6 +962,8 @@
     }
    ],
    "source": [
+    "# run this cell unless otehrwise specified\n",
+    "\n",
     "# df_elife_train['clean'] = clean_corpus\n",
     "\n",
     "# df_elife_train.head()"
@@ -1103,8 +1126,17 @@
     }
    ],
    "source": [
+    "#only run this cell if you have a copy of the cleaned training data\n",
     "df_elife_train_clean = pd.read_csv('data/df_elife_train_clean.csv')\n",
     "df_elife_train_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "912bb19f-9854-4070-ba8f-b07328f18f3e",
+   "metadata": {},
+   "source": [
+    "Below are a word cloud and a frequency distribution they show some of the mroe frequent words found within our data."
    ]
   },
   {
@@ -1180,10 +1212,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5476a0b-9f4e-4351-977c-6d8c585ca9b6",
+   "metadata": {},
+   "source": [
+    "# Term Frequency - Inverse Document Frequency (TF-IDF) Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d22a0113",
    "metadata": {},
    "source": [
-    "The following cell initializes the TF-IDF vectorizer from NLTK and then uses the clean elife training data to create TF-IDF vectors for all the words in the training data."
+    "To begin processing our data to create extractive summaries we implement a method of assigning vectors to words called Term Frequency - Inverse Document Frequency(tf-idf). This process allows us to assign a concept of importance and meaning to words in our documents. This is done by first getting the term frequency, a count of each term in its document divided by the total number of terms in that document. Then the inverse document frequency, which is the total number of documents in our corpus divided by the number of documents containing some specific word, that value is then multiplied by log base e. We will do this for each document to produce a unique set of vector word pairs. The higher a vector the more important that word is to that document. "
    ]
   },
   {
@@ -1202,8 +1242,7 @@
     "# Calculate the TF-IDF score for unigrams and bigrams using the clean data\n",
     "elife_t_c = vectorizer.fit_transform(elife_train_clean)\n",
     "\n",
-    "# The sparse data matrix, doc id num on y axis, type on x axis, vector as data\n",
-    "print(elife_t_c)"
+    "#print(elife_t_c)"
    ]
   },
   {
@@ -1227,30 +1266,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a346ba7d-32f9-4d49-afcd-22bac80a2304",
+   "cell_type": "markdown",
+   "id": "df3ad1c3-4587-4c60-aac0-0c557dc7fc3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'scipy.sparse._csr.csr_matrix'>\n"
-     ]
-    }
-   ],
    "source": [
-    "#type check\n",
-    "print(type(elife_t_c))"
+    "# Extractive Summary Creation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eecbcd42",
+   "id": "2ac5bcc1-e8da-4af2-b65e-0b54e6dff85e",
    "metadata": {},
    "source": [
-    "The following function, sentence_value_creator_2, takes a single article at a time (represented as an ordered list of sentences), cleans those sentences (to match the TF-IDF vectors), splits each sentence by words, matches each word with its vector score, sums the scores over the whole sentence, and returns a list of tuples (sentence index, vector sums)."
+    "Once we have all of our vectors its time to start assembling our summaries. Summaries are computed by assigning every word in our data a vector and then summing those vectors up for each sentence so that each sentence in a document recieves a score. Sentences with higher scores or deemed more informative adn therefore more important to the article."
    ]
   },
   {
@@ -1261,6 +1289,10 @@
    "outputs": [],
    "source": [
     "def sentence_value_creator_2(doc_sents: list, vect_obj) -> list: # List of sentences in a document -> list of tuples (index, sum)\n",
+    "    \"\"\" \n",
+    "    A function to take in a single article at a time, split the article by sentences, clean those sentences, split each sentence by words,\n",
+    "    match each word with its vector, sum the vectors and returns a list of tuples (sentence index, vector sums)\n",
+    "        \"\"\"\n",
     "    sent_index_val_dict = [] # Stores tuples (sentence_index, sum)\n",
     "    for i, sent in enumerate(doc_sents): # For every index and sentence in doc_sents\n",
     "        clean_sent = data_cleaner(sent) # Clean the sentence\n",
@@ -1285,12 +1317,20 @@
     "1) The document is sent to the method remove_between_parens to have citations and other information enclosed in parenthese removed.\n",
     "2) The document is split into a list of sentences (doc_sents).\n",
     "3) The extranctive summary length (number of sentences) is calculated by summary_percent*doc_length. \n",
-    "4) Each sentence in the document is given a score as calculated by the sentence_value_creator_2 function (see above). These scores are saved in a list consisting of tuples of (sentence_index, sentence_score). The sentence_index is the index of this sentence in the original doc_sents.\n",
+    "4) Each sentence in the document is given a score as calculated by the sentence_value_creator_2 function. These scores are saved in a list consisting of tuples of (sentence_index, sentence_score). The sentence_index is the index of this sentence in the original doc_sents.\n",
     "5) The list of tuples is sorted by score and then cropped to contain only the highest scoring top_num sentences. \n",
     "6) The list of tuples is then sorted by index so that the final summary can consist of sentences in their original order.\n",
     "5) Finally, the sentences represented by the top-scoring indices are concatenated into a string, in order, and that string is added to a list of summaries as the summary for the current document.\n",
     "\n",
     "After the loop, the list of extractive TF-IDF summaries is added as a new column in the elife training dataframe called 'tfidf_summary'. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c2d933-52dd-4d35-b84b-3cf651c90b93",
+   "metadata": {},
+   "source": [
+    "Once we ever sentence in every article has been given a score we rank them from highest to lowest, take the top 60% of sentences in proportion the original number of sentences in the article and sort them based on order of appearence in accordance to their "
    ]
   },
   {
@@ -1314,7 +1354,7 @@
    "source": [
     "summary_percent = 0.6 # Percentage of total document sentences to save as the summary\n",
     "doc_summaries = [] # List to store the document summaries\n",
-    "doc_list = df_elife_train.article.tolist() # List of all the docs in elife train\n",
+    "doc_list = df_elife_train_clean.article.tolist() # List of all the docs in elife train\n",
     "\n",
     "\n",
     "for doc in doc_list: # For every document\n",
@@ -1348,7 +1388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1362,7 +1402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
