minor review changes

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "b27b53ad",
    "metadata": {},
    "outputs": [
@@ -79,11 +79,8 @@
     "from nltk import pos_tag\n",
     "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
     "from nltk.tokenize import regexp_tokenize, word_tokenize, RegexpTokenizer\n",
-    "\n",
     "import random\n",
-    "\n",
     "import pandas as pd\n",
-    "\n",
     "from sklearn.naive_bayes import MultinomialNB,BernoulliNB\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -95,29 +92,20 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, cross_validate, GridSearchCV, RandomizedSearchCV\n",
     "from sklearn import metrics\n",
-    "\n",
     "import json\n",
-    "\n",
     "import csv\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
     "import seaborn as sns\n",
-    "\n",
     "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator\n",
-    "\n",
     "from tabulate import tabulate\n",
-    "\n",
     "import requests\n",
-    "\n",
     "import re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "e2fe9e98",
    "metadata": {},
    "outputs": [],
@@ -127,7 +115,7 @@
     "#from importables import *\n",
     "#grabs all imports from import.py\n",
     "\n",
-    "#This is not working but it should be >>>:(\n"
+    "#This is not working but it should be >>>:("
    ]
   },
   {
@@ -266,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "8228a24e",
    "metadata": {},
    "outputs": [
@@ -397,7 +385,7 @@
     "df_plos_train_3 = pd.read_parquet('data/PLOS/train-00002-of-00003.parquet')\n",
     "df_plos_test = pd.read_parquet('data/PLOS/test-00000-of-00001.parquet')\n",
     "df_plos_validation = pd.read_parquet('data/PLOS/validation-00000-of-00001.parquet')\n",
-    "df_plos_train_3.head(5)\n"
+    "df_plos_train_3.head(5)"
    ]
   },
   {
@@ -468,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "509de2b3-ec02-40cb-8eb4-64608f79234c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#print(articles_list[0])\n",
     "def freqdist_maker(doc_list):\n",
-    "#tokenize all words in all articles\n",
+    "    \"\"\"A function to tokenize all words in all articles\"\"\"\n",
     "    doc_tokens = []\n",
     "    for i in doc_list:\n",
     "        doc_tokens.append(word_tokenize(i))\n",
@@ -750,7 +738,7 @@
    "id": "0fde823a-9d5c-42f1-bcb5-c464d512e19d",
    "metadata": {},
    "source": [
-    "One of the other problems we encounterd when inspecting the data is the large amount of academic in text citations. These citations cause several issues, they're so common that they occur far more frequently than content words do which creates extra noise. They're also full of punctuation which messes with the mechanics of the sentence tokenizer we selected whcih resulted in \"false\" sentences. To solve these issues we removed the citations and moved hte ufnction to do so up above the more standard cleaning function. This allows us to keep our sentence index stable throughout the process."
+    "One of the other problems we encountered when inspecting the data is the large amount of academic in text citations. These citations cause several issues, they're so common that they occur far more frequently than content words do which creates extra noise. They're also full of punctuation which messes with the mechanics of the sentence tokenizer we selected whcih resulted in \"false\" sentences. To solve these issues we removed the citations and moved hte ufnction to do so up above the more standard cleaning function. This allows us to keep our sentence index stable throughout the process."
    ]
   },
   {
@@ -1278,7 +1266,7 @@
    "id": "2ac5bcc1-e8da-4af2-b65e-0b54e6dff85e",
    "metadata": {},
    "source": [
-    "Once we have all of our vectors its time to start assembling our summaries. Summaries are computed by assigning every word in our data a vector and then summing those vectors up for each sentence so that each sentence in a document recieves a score. Sentences with higher scores or deemed more informative adn therefore more important to the article."
+    "Once we have all of our vectors its time to start assembling our summaries. Summaries are computed by assigning every word in our data a vector and then summing those vectors up for each sentence so that each sentence in a document recieves a score. Sentences with higher scores or deemed more informative and therefore more important to the article."
    ]
   },
   {
@@ -1330,7 +1318,7 @@
    "id": "06c2d933-52dd-4d35-b84b-3cf651c90b93",
    "metadata": {},
    "source": [
-    "Once we ever sentence in every article has been given a score we rank them from highest to lowest, take the top 60% of sentences in proportion the original number of sentences in the article and sort them based on order of appearence in accordance to their "
+    "Once every sentence in every article has been given a score we rank them from highest to lowest, take the top 60% of sentences in proportion the original number of sentences in the article and sort them based on order of appearence in accordance to their scores."
    ]
   },
   {
