--- a/project.ipynb
+++ b/project.ipynb
@@ -707,7 +707,7 @@
    "id": "f30a50e6-ff10-49fd-a8b1-f704f4ac09b9",
    "metadata": {},
    "source": [
-    "The first step to our data praparation was to remove large outliers. If you look at the Elife Document Length bar graph above that at about 11000 words in lenght we have a handful of very legnthy documents. This will allow us to cut back on the amount of processing and save on time as well as not having content from an extra large document over weighting our tf-idf scores. We removed 53 large outlier articles."
+    "The first step to our data praparation was to remove large outliers. If you look at the Elife Document Length bar graph above that at about 110000 words in length we have a handful of very lengthy documents. This will allow us to cut back on the amount of processing and time. We will also benefit from not having content from extra large documents over weighting our tf-idf scores. We removed 53 large outlier articles."
    ]
   },
   {
@@ -738,7 +738,7 @@
    "id": "0fde823a-9d5c-42f1-bcb5-c464d512e19d",
    "metadata": {},
    "source": [
-    "One of the other problems we encountered when inspecting the data is the large amount of academic in text citations. These citations cause several issues, they're so common that they occur far more frequently than content words do which creates extra noise. They're also full of punctuation which messes with the mechanics of the sentence tokenizer we selected whcih resulted in \"false\" sentences. To solve these issues we removed the citations and moved hte ufnction to do so up above the more standard cleaning function. This allows us to keep our sentence index stable throughout the process."
+    "One of the other problems we encountered when inspecting the data is the large amount of academic in text citations. These citations cause several issues, they're so common that they occur far more frequently than content words do, which creates extra noise. They're also full of punctuation which messes with the mechanics of the sentence tokenizer we selected. This resulted in a lot of \"false\" sentences. To solve these issues we removed the citations and moved the function to do so up above the more standard cleaning function. This allows us to keep our sentence index stable throughout the process while also cutting the amount of sentences per doc by almost half."
    ]
   },
   {
@@ -1124,7 +1124,7 @@
    "id": "912bb19f-9854-4070-ba8f-b07328f18f3e",
    "metadata": {},
    "source": [
-    "Below are a word cloud and a frequency distribution they show some of the mroe frequent words found within our data."
+    "Below are a word cloud and a frequency distribution. They show some of the more frequent words found within our data. This kind of data analysis was helpful in identifying important features in the data and looking at what we might need to strip out that isn't caught in the standard stoplist wordlist."
    ]
   },
   {
@@ -1211,7 +1211,7 @@
    "id": "d22a0113",
    "metadata": {},
    "source": [
-    "To begin processing our data to create extractive summaries we implement a method of assigning vectors to words called Term Frequency - Inverse Document Frequency(tf-idf). This process allows us to assign a concept of importance and meaning to words in our documents. This is done by first getting the term frequency, a count of each term in its document divided by the total number of terms in that document. Then the inverse document frequency, which is the total number of documents in our corpus divided by the number of documents containing some specific word, that value is then multiplied by log base e. We will do this for each document to produce a unique set of vector word pairs. The higher a vector the more important that word is to that document. "
+    "To begin processing our data to create extractive summaries we implement a method of assigning vectors to words called Term Frequency - Inverse Document Frequency(tf-idf). This process allows us to assign a concept of importance and meaning to words in our documents represented by a number. This is done by first getting the term frequency, a count of each term in its document divided by the total number of terms in that document. Then the inverse document frequency, which is the total number of documents in our corpus divided by the number of documents containing some specific word, that value is then multiplied by log base e. We will do this for each document to produce a unique set of vector word pairs. The higher a vector the more important that word is to that document. "
    ]
   },
   {
